# django-starter

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  Readme.md  docker-compose.cypress.yml  docker-compose.test.yml  docker-compose.yml  gunicorn.conf.py  integration-server.sh  integration-test.sh  lerna.json  make.sh  nginx.test.conf  package-lock.json  package.json  pyproject.toml
backend/: entrypoint.sh  manage.py
backend/core/: settings.py  urls.py  wsgi.py
backend/pages/: urls.py  views.py
backend/pages/templates/pages/: home.html
backend/pages/tests/: test_view.py
backend/seed/: services.py
backend/seed/management/commands/: seeddb.py
backend/templates/: 400.html  403.html  403_csrf.html  404.html  500.html  _form_errors.html  _global_vars.html  _navbar.html  _notifications.html  base.html  modal.html  pagination.html
backend/templates/account/: account_inactive.html  email.html  email_confirm.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html  verified_email_required.html
backend/templates/widgets/: checkbox_field.html  input_field.html
backend/users/: admin.py  mixins.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: test_model.py
backend/utils/: mail.py  models.py  storage.py  tests.py  utils.py
frontend/: .eslintrc.js  babel.config.js  package-lock.json  package.json  postcss.config.js  snowpack.config.js  tailwind.config.js  tsconfig.json
frontend/src/css/: styles.css
frontend/src/js/utils/: menu.spec.ts  menu.ts  notifications.spec.ts  notifications.ts
frontend/src/js/utils/menu/: controller.spec.ts  controller.ts  view.spec.ts  view.ts
frontend/src/js/utils/notifications/: controller.spec.ts  controller.ts  view.spec.ts  view.ts
integration/: Dockerfile  cypress.json  package-lock.json  package.json  tsconfig.json
integration/cypress/: .eslintrc.json  Dockerfile
integration/cypress/integration/auth/: accountCreation.feature
integration/cypress/integration/auth/accountCreation/: index.js
integration/cypress/integration/permissions/: loginRequired.feature
integration/cypress/integration/permissions/loginRequired/: candidates.js  clients.js  common.js  home.js  recruiters.js  vacancies.js
integration/cypress/plugins/: index.js
integration/cypress/support/: commands.js
